--- a/translations/global+intl-icu.fr.xlf
+++ b/translations/global+intl-icu.fr.xlf
@@ -4179,5 +4179,27 @@
         <target>et autres.</target>
       </segment>
     </unit>
+    <unit id="POVV2jW" name="Deine Platzierung">
+      <notes>
+        <note category="german">Deine Platzierung</note>
+        <note category="from">twig:///templates/ajax/soul/season.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Deine Platzierung</source>
+        <target>Deine Platzierung</target>
+      </segment>
+    </unit>
+    <unit id="2JRm9.u" name="{num} Seelenpunkte, Platz {rank}">
+      <notes>
+        <note category="german">{num} Seelenpunkte, Platz {rank}</note>
+        <note category="from">twig:///templates/ajax/soul/season.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>{num} Seelenpunkte, Platz {rank}</source>
+        <target>{num} Seelenpunkte, Platz {rank}</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
