--- a/translations/buildings+intl-icu.fr.xlf
+++ b/translations/buildings+intl-icu.fr.xlf
@@ -3704,5 +3704,15 @@
         <target>Aucun bonus spécial</target>
       </segment>
     </unit>
+    <unit id="j_25xjC" name="Die Verteidigung der Stadt wird um 10% erhöht.">
+      <notes>
+        <note category="german">Die Verteidigung der Stadt wird um 10% erhöht.</note>
+        <note category="from">db://BuildingPrototype</note>
+      </notes>
+      <segment>
+        <source>Die Verteidigung der Stadt wird um 10% erhöht.</source>
+        <target>L'organisation de la défense est optimisée, le gain de la défense total de la ville passe à 10%.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
