Fixed FR Translation for escort message

--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -22381,7 +22381,7 @@ cette violente opération...]]></target>
       </notes>
       <segment>
         <source>Dieser Bürger gestattet dir nicht auf seine Gegenstände zuzugreifen.</source>
-        <target>Ce citoyen ne veut pas que vous touchiez à son sac.</target>
+        <target>Ce citoyen refuse que vous touchiez à ses objets.</target>
       </segment>
     </unit>
     <unit id="sxHlIDp">
