Fixed FR Translation for escort message (2)

--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -19292,7 +19292,7 @@
       </notes>
       <segment>
         <source>Dieser Bürger möchte in die Stadt gebracht werden.</source>
-        <target>Ce citoyen souhaite retourner en ville.</target>
+        <target>Ce citoyen souhaite être ramené en ville.</target>
       </segment>
     </unit>
     <unit id="CIxCi9h">
