FR Translation for error message in soul

--- a/translations/soul+intl-icu.fr.xlf
+++ b/translations/soul+intl-icu.fr.xlf
@@ -2961,7 +2961,7 @@
       </notes>
       <segment>
         <source>Du kannst kein Icon ohne einen Titel wählen.</source>
-        <target>Du kannst kein Icon ohne einen Titel wählen.</target>
+        <target>Vous ne pouvez pas choisir une icône sans titre.</target>
       </segment>
     </unit>
     <unit id="wMIPplV" name="Statistiken">
